# DEVITO

./: .flake8  .gitignore  .pre-commit-config.yaml  ADAPTIVE_QUICKSTART.md  AVA-System.ps1  AVA.ps1  CELEBRATION_100_PERCENT.md  Dockerfile  Dockerfile.dev  Makefile  Monitor.ps1  QUICK_START.sh  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_SCORE_100.md  ULTIMATE_DEFENSE_README.md  ULTIMATE_SECURITY_V2_README.md  ULTIMATE_SECURITY_V96_README.md  WELLBEING_README.md  __init__.py  ava.db  blockchain_export_1771182733.json  demo_wellbeing.py  deploy_wellbeing.sh  docker-compose.yml  interface_documentation_complete.json  launch_adaptive_security.py  launch_security.py  launch_ultimate_defense.py  launch_ultimate_security_v2.py  launch_ultimate_v96.py  pyproject.toml  requirements.txt  security_state_v96.json  security_statistics_complete.json  tangle_export_1771182733.json  test_validators.py  tox.ini  validators.py
.devcontainer/: devcontainer.json
.github/workflows/: ava-neuro-tangle-safe-check.yml  ava-safe-audit-one-script.yml  ava-safe-audit-readonly.yml  code-quality.yml  issue112-pssa-fix.yml  issue112-self-fix.yml  psscriptanalyzer.yml  run-all-safe.yml  safe-audit-verified-pr.yml  safe-audit.yml  tests.yml
.lsp/.cache/: db.transit.json
audit/: AVA_EPHEMERAL_FULL_CAPABILITY_RETRY_1.md  SAFE_AUDIT_PR_TRIGGER.md  SAFE_AUDIT_RUN_20260718.md  SAFE_AUDIT_TRIGGER.md
ava/: __init__.py  __main__.py  security.py  security_middleware.py  server.py
ava/ai/: ghz_experiment.py  optimizer.py
ava/api/: README.md  __init__.py  admin.py  grpc_auth.py  grpc_server.py  security.py  server.py  wellbeing.py
ava/api/proto/: __init__.py  ava_service.proto
ava/cli/: __init__.py  main.py
ava/clients/: __init__.py  isc_client.py
ava/cloud/: __init__.py  manager.py
ava/cloud/providers/: __init__.py  aws.py  azure.py  gcp.py
ava/config/: __init__.py  settings.py  vault.py
ava/core/: __init__.py  engine.py  logging.py
ava/dashboard/: config.py
ava/db/: __init__.py  pool.py
ava/lsp/: __init__.py  __main__.py  restart_manager.py
ava/monitoring/: __init__.py  grpc_metrics.py  metrics.py  real_state.py
ava/security/: __init__.py  adaptive_ids.py  adaptive_orchestrator.py  aggressive_defense.py  auth.py  blockchain_security.py  config.py  cookie_scanner.py  distributed_mesh.py  honeypot_system.py  incident_response.py  interface_guard.py  iot_security_enhanced.py  metrics.py  metrics_server.py  network_defense.py  orchestrator.py  tangle_network.py  threat_intelligence.py  universal_protection.py  windows_lab.py  windows_monitor.py  zero_trust.py
ava/sync/: __init__.py  distributed.py  manager.py
ava/tasks/: __init__.py  scheduler.py
ava/utils/: __init__.py  action_policy.py  exceptions.py  models.py  performance.py  validators.py
ava/wellbeing/: orchestrator.py
deployment/: DEPLOYMENT.md  README.md
deployment/docker/: Dockerfile.adaptive  docker-compose.adaptive.yml  grafana-datasource.yml  prometheus.yml
deployment/grafana/: ava-adaptive-security-dashboard.json  ava-grpc-dashboard.json
deployment/k8s/: adaptive-security-deployment.yaml
deployment/kubernetes/: README.md  deployment.yaml
deployment/systemd/: ava-grpc.service  install.sh
docs/: ADAPTIVE_SECURITY.md  ARCHITECTURE.md  AVA_2_0.md  AVA_3_0_INTEGRATION.md  AVA_FLASH_IMMUTABLE_RULE.md  DEVELOPMENT.md  GRPC_SECURITY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_FEATURES.md  README.md  SECURITY_MASTER.md  SECURITY_PLATFORM.md  WINDOWS_SECURITY.md  api.md  biologisch-plausible-neuronenmodelle.md  getting-started.md  issue-112-neuro-tangle-cleanup.md
examples/: basic.py  grpc_client.py
monitoring/: alert_rules.yml  alertmanager.yml  nginx-8443.conf  prometheus.yml  wellbeing-dashboard.json
monitoring/provisioning/dashboards/: wellbeing-dashboard.json  wellbeing.yml
scripts/: AVA-SecurityGuardian.ps1  AVA.ps1  AVA2.ps1  AVA3.ps1  AVA_3_14_NEXT_LAYER_ALL.ps1  AVA_3_14_SAFE_LOCAL_NODE.ps1  AVA_CI_SENTINEL_20260718.ps1  AVA_COMMUNITY_SECURITY_CHECK_v3.ps1  AVA_CORE_STACK_v1.ps1  AVA_EPHEMERAL_FULL_CAPABILITY_AUDIT.ps1  AVA_FAMILY_ARCHIVE_WANDERSMANN_MEMORY_CORE_v1.ps1  AVA_FAMILY_PHOTO_ARCHIVE_v2.ps1  AVA_Immune_System_v2.ps1  AVA_Immune_System_v3.ps1  AVA_NeuroTangle_Guardian_v1_SAFE.ps1  AVA_SAFE_AUDIT_READONLY.ps1  AVA_SAFE_AUDIT_READONLY_NO_NETWORK.ps1  AVA_SOC_CORE.ps1  AVA_SOC_CORE_CLEANED.ps1  AVA_SOC_PORTAL_V5.ps1  AVA_SOC_PORTAL_V6_SAFE.ps1  AVA_SOC_V7_SAFE.ps1  AVA_SOC_V7_SAFE_READONLY.ps1  AVA_SPYWARE_RISK_AUDIT.ps1  AVA_SYMBOLIC_MEMORY_PORTAL.ps1  AVA_WLAN_TANGLE_SENSOR.ps1  AVA_WORKFLOW_TRIGGER_SAFE.ps1  AVA_v4_Portal.ps1  CI_TRIGGER_SAFE.ps1  Test_AVA_NeuroTangle_Guardian_v1_SAFE.ps1  ava_community_security_check_v1.ps1  ava_portal_v4.ps1  ava_soc_scan_v1.ps1  generate_grpc_certs.sh  security_hardening.sh  setup-grafana-dashboard.sh  setup_firewall.sh  setup_letsencrypt.sh  setup_ufw.sh  setup_vault_integration.sh
scripts/windows/: README.md  ava_audit_only.ps1  ava_ethical_lab.ps1  ava_portal_v4.ps1  ava_security_framework.ps1  ava_soc_toolkit.ps1  ghz_experiment.ps1
tests/: test_action_policy_acceptance.py  test_approve_all.py  test_ava.py  test_cli_start.py  test_config.py  test_engine.py  test_isc_client.py  test_lsp.py  test_real_state.py  test_run_workflow_command.py  test_utils.py  test_wellbeing.py
tests/performance/: __init__.py  test_performance.py
tools/: Invoke-AvaSafeAuditStatic.ps1
