[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ava"
version = "0.1.0"
description = "AVA - A Python project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["ava"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "asyncio-contextmanager>=1.0.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "boto3>=1.26.0",
    "azure-storage-blob>=12.18.0",
    "google-cloud-storage>=2.10.0",
    "prometheus-client>=0.19.0",
    # gRPC Secure Server
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "protobuf>=4.25.0",
    "pyjwt>=2.8.0",
    # Production Features
    "hvac>=2.1.0",  # HashiCorp Vault client
    "cryptography>=42.0.0",  # TLS support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
    "locust>=2.17.0",
    "httpx>=0.24.0",
]

[project.scripts]
ava = "ava.cli.main:app"

[tool.setuptools]
packages = ["ava"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "ava.ai.ghz_experiment",
    "ava.ai.optimizer",
    "ava.api.grpc_auth",
    "ava.api.grpc_server",
    "ava.api.proto",
    "ava.api.security",
    "ava.cloud.manager",
    "ava.cloud.providers.aws",
    "ava.cloud.providers.azure",
    "ava.cloud.providers.gcp",
    "ava.config.vault",
    "ava.core.engine",
    "ava.db.pool",
    "ava.monitoring.grpc_metrics",
    "ava.monitoring.metrics",
    "ava.security.adaptive_ids",
    "ava.security.auth",
    "ava.security.blockchain_security",
    "ava.security.cookie_scanner",
    "ava.security.distributed_mesh",
    "ava.security.incident_response",
    "ava.security.network_defense",
    "ava.security.orchestrator",
    "ava.security.tangle_network",
    "ava.security.threat_intelligence",
    "ava.security.universal_protection",
    "ava.security.windows_lab",
    "ava.security.windows_monitor",
    "ava.security_middleware",
    "ava.server",
    "ava.sync.distributed",
    "ava.tasks.scheduler",
    "ava.wellbeing.orchestrator",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=ava --cov-report=html --cov-report=term-missing"
